--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,14 +17,14 @@ services:
     ports:
       - 8080:8080
 
-  node:
-    build:
-      context: .
-    depends_on:
-      - postgres
-      - adminer
-    ports:
-      - "3000:3000"
+  # node:
+  #   build:
+  #     context: .
+  #   depends_on:
+  #     - postgres
+  #     - adminer
+  #   ports:
+  #     - "3000:3000"
 
 volumes:
   db:
