updating indentation and docker-compose configuration

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tcc-api",
+  "name": "pet-management-api",
   "version": "1.0.0",
   "description": "API for a pet management application",
   "author": "Vitor Vidal",
