--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.9"
+version: '3.9'
 services:
   postgres:
     image: postgres:13-alpine
@@ -8,7 +8,7 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: pet
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - db:/var/lib/postgresql/data
 
@@ -16,7 +16,7 @@ services:
     image: adminer:4
     restart: always
     ports:
-      - 8080:8080
+      - 8091:8080
 
 volumes:
   db:
