--- a/package.json
+++ b/package.json
@@ -21,51 +21,51 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.18",
-    "@nestjs/core": "^7.6.18",
+    "@nestjs/common": "^8.0.11",
+    "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
-    "@nestjs/passport": "^8.0.1",
-    "@nestjs/platform-express": "^7.6.18",
-    "@nestjs/swagger": "^4.8.2",
-    "@nestjs/typeorm": "^7.1.5",
+    "@nestjs/passport": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.1.0",
+    "@nestjs/typeorm": "^8.0.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
-    "passport": "^0.4.1",
+    "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.6.0",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.7",
+    "rxjs": "^7.4.0",
     "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.2.36",
-    "uuid": "^8.3.1"
+    "typeorm": "^0.2.38",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.1.1",
-    "@nestjs/schematics": "^7.3.1",
-    "@nestjs/testing": "^7.6.18",
+    "@nestjs/cli": "^8.1.2",
+    "@nestjs/schematics": "^8.0.3",
+    "@nestjs/testing": "^8.0.11",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "26.0.24",
-    "@types/node": "^16.4.10",
+    "@types/jest": "27.0.2",
+    "@types/node": "^16.10.3",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "3.0.2",
-    "@typescript-eslint/parser": "3.10.1",
-    "eslint": "7.31.0",
+    "@typescript-eslint/eslint-plugin": "5.0.0",
+    "@typescript-eslint/parser": "5.0.0",
+    "eslint": "^7.2.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
-    "jest": "26.6.3",
-    "prettier": "^2.3.2",
-    "supertest": "^6.1.4",
-    "ts-jest": "26.5.6",
-    "ts-loader": "^9.2.5",
-    "ts-node": "^10.2.0",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "eslint-plugin-import": "^2.24.2",
+    "jest": "27.2.5",
+    "prettier": "^2.4.1",
+    "supertest": "^6.1.6",
+    "ts-jest": "27.0.5",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.3.0",
+    "tsconfig-paths": "^3.11.0",
+    "typescript": "^4.4.3"
   },
   "jest": {
     "moduleFileExtensions": [
