--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.3</version>
+		<version>2.6.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>dev.vitorvidal</groupId>
 	<artifactId>pet-management-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>pet-management-api</name>
-	<description>A Pet Management API</description>
+	<description>A Pet Management API</description>O
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -49,6 +49,12 @@
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-gson</artifactId>
 			<version>0.11.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.6</version>
 		</dependency>
 
 		<dependency>
