--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>pet-management-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>pet-management-api</name>
-	<description>A Pet Management API</description>O
+	<description>A Pet Management API</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
