--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 spring:
   datasource:
     url: jdbc:cassandra://localhost:9042
-
+  main:
+    allow-circular-references: true
 cassandra:
   schema-action: create_if_not_exists
   local-datacenter: datacenter1
